actualización de imagenes

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                 
                 <div class="experiencie__box">
                     <!-- Pon el logotipo/captura de pantalla de tu proyecto -->
-                    <img class="experience__img" src="assets\decodificador.png">
+                    <img class="experience__img" src="assets\decodificador2.png">
                     <div class="experience__info">
                         <h2 class="experience__title">Encriptador de texto</h2>
                         <p class="experience__text">Challenge Alura Codificador </p>
@@ -290,7 +290,7 @@
                                         demo</button></a></span>
                         </div>
                     </div>
-                    <img class="experience__img" src="assets\ahorcado.png">
+                    <img class="experience__img" src="assets\ahorcado2.png">
                 </div>
 
                 <div class="experiencie__box">
